--- a/login.html
+++ b/login.html
@@ -78,7 +78,8 @@
             <input type="email" placeholder="Email">
             <label>Password-i</label>
             <input type="password" placeholder="Password-i">
-            <input type="button" value="Konfirmo">
+            <a href="index.html">
+            <input type="button" value="Konfirmo"></a>
         </form>
     </div>
     <div class="para-2">
