--- a/signup.html
+++ b/signup.html
@@ -84,7 +84,8 @@
             <input type="password" placeholder="Password-i">
             <label>Konfirmo Password-in</label>
             <input type="password" placeholder="Konfirmo Password-in">
-            <input type="button" value="Konfirmo">
+            <a href="index.html">
+            <input type="button" value="Konfirmo"></a>
             <p>Duke konfirmuar, ju pranoni <br>
                 <a href="#">Termat dhe Kushtet</a> dhe <a href="#">Politikën Privatësinë</a>
             </p>
