--- a/FLORES.html
+++ b/FLORES.html
@@ -72,7 +72,7 @@
       <div class="flower flower--3">
         <div class="flower__leafs flower__leafs--3">
           <div class="flower__leaf flower__leaf--1"><h1 class="letter-flower">U</h1></div>
-          <div class="flower__leaf flower__leaf--2"><h1 class="letter-flower"><A></A></h1></div>
+          <div class="flower__leaf flower__leaf--2"><h1 class="letter-flower">A</h1></div>
           <div class="flower__leaf flower__leaf--3"><h1 class="letter-flower">💖</h1></div>
           <div class="flower__leaf flower__leaf--4"></div>
           <div class="flower__white-circle"></div>
